--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "md5": "^2.2.1",
     "muse-ui": "^2.0.3",
     "vue": "^2.3.3",
+    "vue-amap": "^0.2.8",
     "vue-loader": "^12.2.1",
     "vue-router": "^2.3.1"
   },
